Closed
Bug 635532
Opened 14 years ago
Closed 14 years ago
Crash [@ nsHTMLEditor::HideGrabber() ]
Categories
(Core :: DOM: Editor, defect)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
blocking2.0 | --- | final+ |
People
(Reporter: scoobidiver, Assigned: ehsan.akhgari)
References
Details
(Keywords: crash, regression, Whiteboard: [softblocker])
Crash Data
Attachments
(1 file)
3.40 KB,
patch
|
roc
:
review+
jst
:
review+
smaug
:
review+
roc
:
approval2.0+
|
Details | Diff | Splinter Review |
It is a new crash signature that first appeared in 4.0b12pre/20110218144935.
One comment says:
"Just quit 3 windows at the same time. Minefield has been rendering pages with odd pixelations since the update. Every page seems rendered improperly."
Signature nsHTMLEditor::HideGrabber()
UUID 54542787-4602-4b5c-9f95-074232110219
Time 2011-02-19 10:15:15.437134
Uptime 304
Install Age 304 seconds (5.1 minutes) since version was first installed.
Product Firefox
Version 4.0b12pre
Build ID 20110219030355
Branch 2.0
OS Windows NT
OS Version 6.1.7600
CPU x86
CPU Info GenuineIntel family 6 model 23 stepping 10
Crash Reason EXCEPTION_ACCESS_VIOLATION_READ
Crash Address 0x0
App Notes AdapterVendorID: 8086, AdapterDeviceID: 29c2, AdapterDriverVersion: 8.15.10.1930
Frame Module Signature [Expand] Source
0 xul.dll nsHTMLEditor::HideGrabber editor/libeditor/html/nsHTMLAbsPosition.cpp:307
1 xul.dll nsHTMLEditor::cycleCollection::Unlink editor/libeditor/html/nsHTMLEditor.cpp:241
2 xul.dll nsCycleCollector::CollectWhite xpcom/base/nsCycleCollector.cpp:1912
3 xul.dll nsCycleCollector::FinishCollection xpcom/base/nsCycleCollector.cpp:2720
4 xul.dll nsCycleCollector::Collect xpcom/base/nsCycleCollector.cpp:2530
5 xul.dll nsCycleCollector::Shutdown xpcom/base/nsCycleCollector.cpp:2779
6 xul.dll nsCycleCollector_shutdown xpcom/base/nsCycleCollector.cpp:3505
7 xul.dll mozilla::ShutdownXPCOM xpcom/build/nsXPComInit.cpp:694
8 xul.dll ScopedXPCOMStartup::~ScopedXPCOMStartup toolkit/xre/nsAppRunner.cpp:1115
9 xul.dll XRE_main toolkit/xre/nsAppRunner.cpp:3797
10 firefox.exe wmain toolkit/xre/nsWindowsWMain.cpp:128
11 firefox.exe __tmainCRTStartup obj-firefox/memory/jemalloc/crtsrc/crtexe.c:591
12 kernel32.dll BaseThreadInitThunk
13 ntdll.dll ntdll.dll@0x5b428
14 ntdll.dll ntdll.dll@0x5b3fb
The regression range is:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e95166704b63&tochange=689f55593c70
More reports at:
https://crash-stats.mozilla.com/report/list?product=Firefox&range_value=4&range_unit=weeks&signature=nsHTMLEditor%3A%3AHideGrabber%28%29
Assignee | ||
Comment 2•14 years ago
|
||
Actually I know what's wrong here. We should check to make sure that we're not removing those anonymous objects needlessly. Patch forthcoming.
Assignee | ||
Comment 3•14 years ago
|
||
And I think we need to softblock on this for final. Although I'd really like us to get this in for b12 if possible.
blocking2.0: --- → final+
Whiteboard: [softblocker]
Assignee | ||
Comment 4•14 years ago
|
||
Assignee | ||
Updated•14 years ago
|
Attachment #513803 -
Flags: approval2.0?
Assignee | ||
Comment 5•14 years ago
|
||
Comment on attachment 513803 [details] [diff] [review]
Patch (v1)
This patch is fairly trivial, trying to parallelize review requests! :-)
Attachment #513803 -
Flags: review?(peterv)
Attachment #513803 -
Flags: review?(jst)
Attachment #513803 -
Flags: review?(Olli.Pettay)
Attachment #513803 -
Flags: review?(roc)
Attachment #513803 -
Flags: review+
Attachment #513803 -
Flags: approval2.0?
Attachment #513803 -
Flags: approval2.0+
Updated•14 years ago
|
Attachment #513803 -
Flags: review?(jst) → review+
Comment 6•14 years ago
|
||
Landed on mozilla-central:
http://hg.mozilla.org/mozilla-central/rev/12056f3beaf2
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Attachment #513803 -
Flags: review?(Olli.Pettay) → review+
Assignee | ||
Updated•14 years ago
|
Attachment #513803 -
Flags: review?(peterv)
Comment 7•14 years ago
|
||
Thanks Ehsan for cleaning this up.
Updated•14 years ago
|
Crash Signature: [@ nsHTMLEditor::HideGrabber() ]
You need to log in
before you can comment on or make changes to this bug.
Description
•