editor/libeditor/html/nsHTMLEditor.h
@@ -929,6 +929,7 @@ protected:
   void     SetFinalSize(PRInt32 aX, PRInt32 aY);
   void     DeleteRefToAnonymousNode(nsIDOMNode * aNode);
   void     SetResizeIncrements(PRInt32 aX, PRInt32 aY, PRInt32 aW, PRInt32 aH, PRBool aPreserveRatio);
+  void     HideAnonymousEditingUIs();
 
   /* ABSOLUTE POSITIONING */
 
